@@ -1,13 +1,12 @@
 Package: Rmpi
-Version: 0.5-1
-Date: 2005-12-15
+Version: 0.5-2
+Date: 2006-04-5
 Title: Interface (Wrapper) to MPI (Message-Passing Interface)
 Author: Hao Yu
 Maintainer: Hao Yu <hyu@stats.uwo.ca>
 Depends: R (>= 2.0.0)
 Description: Rmpi provides an interface (wrapper) to MPI APIs. It also 
-	     provides interactive R slave environment in which 
-	     distributed statistical computing can be carried out.
+	     provides interactive R slave environment.
 License: GPL version 2 or newer
 URL: http://www.stats.uwo.ca/faculty/yu/Rmpi
-Packaged: Thu Dec 15 01:10:35 2005; hyu
+Packaged: Wed Apr  5 09:40:34 2006; hyu
