@@ -1,1 +1,0 @@
-cp src/sleep.exe $DPKG/
