@@ -21,7 +21,7 @@
 \author{
 Alek Hunchak and Hao Yu
 }
-\seealse{
+\seealso{
 \code{\link{mpi.cart.coords}}
 }
 \references{
